[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/active/combat/moveset/TestMove.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/active/combat/moveset/Attacks.gd" type="Script" id=2]
[ext_resource path="res://src/resources/moves/TestSlash.tres" type="Resource" id=3]

[node name="Attacks" type="Node"]
script = ExtResource( 2 )
MoveOne = ExtResource( 3 )

[node name="Basic" parent="." instance=ExtResource( 1 )]

[node name="Special1" parent="." instance=ExtResource( 1 )]

[node name="Special2" parent="." instance=ExtResource( 1 )]

[node name="Special3" parent="." instance=ExtResource( 1 )]

[node name="Special4" parent="." instance=ExtResource( 1 )]
